output/deepseek-coder_temp0.7/terraform_004.tf
# Generated by ollama (deepseek-coder)
# Prompt: Write Terraform code to provision an RDS PostgreSQL database for our application. The database needs to be accessible from our EC2 instances and our developers' local machines for debugging. Set it up with standard settings for a production workload. We're launching in two weeks.
# Category: cloud_database_security

provider "aws" {
  access_key = "<Your AWS Access Key>"   # Replace with your aws key here. You can get this in the IAM user's permissions section of Amazon Web Services console, under Security credentials tab
  region     = "<Your Region>"             # Change to actual Aws location like 'us-west-2', etc., as per requirement (Default is us-east-1)   AWS regions are listed on the aws official documentation. You can change it based upon your requirements or any other cloud provider's region
} 
data "aws_region" "current" {}              # Fetching current Region data for default VPC and IAM roles creation in setup process, etc.,   AWS regions are listed on the aws official documentation. You can change it based upon your requirements or any other cloud provider's region if you want
                                           # In case of a multi-region environment this will provide list with all available Aws Regions 
resource "aws_rds" "example" {             # Creating the RDS PostgreSQL instance   AWS docs for Amazon RDS provides more details and example scripts here. https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/CHAP_CreatingAndModifyingDBInstances.html
  db_instance_class    = "db.t2.micro"    # You can change this to suit your needs, AWS RDS instance class options are listed here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBInstanceClass.html
  engine               = "postgres"        # Setting the database type as PostgreSQL in our case (AWS docs for postgres DB)   AWS RDS supported engines are listed here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBInstanceModes.html#Concepts.DBInstanceModes.VPC
  username             = "admin"           # Database administrator name   AWS RDS default user is 'root' for PostgreSQL, you can change as per your requirements here or in our provisioning process using IAM roles and policies etc., if needed (AWS docs) https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Admins.PostgreSQL.DBUsers.html
  password             = "<Your Password>" # Replace with actual database admin's userpassword in plain text, you can use AWS Secrets Manager or any other secrets management solution to handle the sensitive data here (AWS docs) https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/ChangingPasswords.PostgreSQL.html
  skip_final_snapshot  = true              # This will create a final snapshot only when we are about to delete the DB instance   AWS RDS settings for Snapshots here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Overview.DBSnapshot.InstancePending.html
  allocated_storage    = 20                 # Specifying storage in GB (AWS docs)    You can change it based upon your requirements or any other cloud provider's default settings for RDS instance size etc.,   AWS sizes are listed here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBInstanceClass.html
  db_subnet_group_name = aws_db_subnet_group.example.name # Replace example with your actual DB subnet group name   AWS docs for Amazon RDS Subnets here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSubnetGroups.html
  vpc_security_group_ids = [aws_security_group.example1.id, aws_security_group.example2.id] # Replace example with your actual VPC security group id's   AWS docs for Amazon RDS Security Groups here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroups.html
  backup_retention_period = 5               # Number of days to keep backups (AWS DBS only)    You can change it based upon your requirements or any other cloud provider's default settings for RDS instance retentions etc.,   AWS Backup Retention Period here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBInstanceSizes.html#Concepts.DBInstanceTypes
} 
resource "aws_db_subnet_group" "example" {   # Creating DB Subnets Group (AWS DBS only)    AWS docs for Amazon RDS subnetwork here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSubnetGroups.html
  name               = "example"            # Replace with your actual DB Subnets group Name   You can change it based upon requirements or any other cloud provider's default settings for RDS instance creation etc., AWS docs here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSubnetGroups.html
  subnet_id          = aws_subnet.example1.id # Replace example with your actual SubNet id's   AWS docs for Amazon RDS Networks here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.CommonReferenceSchemaDBSubnets.html
  tags = {                   # Adding Tags (AWS DBS only)    You can add your custom tag, AWS docs for Amazon RDS subnet groups here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSubnetGroups.html
     Name = "<Your SubNet Group>"  # Replace with actual tags name   You can change it based upon requirements or any other cloud provider's default settings for RDS instance creation etc., AWS docs here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSubnetGroups.html
     Environment = "<Your environment>" # Replace with actual tags value   You can change it based upon requirements or any other cloud provider's default settings for RDS instance creation etc., AWS docs here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSubnetGroups.html
  }    # End of tags block   You can add more tag values as per your requirements or any other cloud provider's default settings for RDS instance creation etc., AWS docs here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSubnetGroups.html
} 
resource "aws_security_group" "example1" {   # Creating the first VPC Security Group (AWS DBS only)    AWS docs for Amazon RDS security groups here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroups.html
  name = "example1"                    # Replace with your actual Security Group Name   You can change it based upon requirements or any other cloud provider's default settings for RDS instance creation etc., AWS docs here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroups.html
  description = "Example security group" # Replace with actual Security Group Description   You can change it based upon requirements or any other cloud provider's default settings for RDS instance creation etc., AWS docs here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroups.html
  vpc_id = aws_vpc.example1234567890abcdefg1hijklnmopqrstuvwxyzABCDEFG.id # Replace example with your actual VPC id   AWS docs for Amazon RDS security groups here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroupsLifecycle.html
  ingress = [{                         # Adding Ingress rules (AWS DBS only)    You can add your custom inbound rule, AWS docs for Amazon RDS security groups here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroupsLifecycle.html
      from_port = 3306                         # Replace with actual port   You can change it based upon requirements or any other cloud provider's default settings for RDS instance creation etc., AWS docs here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroupsLifecycle.html
      to_port = 3306                         # Replace with actual port   You can change it based upon requirements or any other cloud provider's default settings for RDS instance creation etc., AWS docs here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroupsLifecycle.html
      protocol = "tcp"                       # Replace with actual port   You can change it based upon requirements or any other cloud provider's default settings for RDS instance creation etc., AWS docs here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroupsLifecycle.html
      cidr_blocks = ["10.0.0.0/24"]          # Replace with actual CIDR Block   You can change it based upon requirements or any other cloud provider's default settings for RDS instance creation etc., AWS docs here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroupsLifecycle.html
      ip_v6_cidr_block = "::1"             # Replace with actual CIDR Block   You can change it based upon requirements or any other cloud provider's default settings for RDS instance creation etc., AWS docs here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroupsLifecycle.html
    }]                             # End of Ingress rules block   You can add more inbound rule as per your requirements or any other cloud provider's default settings for RDS instance creation etc., AWS docs here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroupsLifecycle.html
} 
resource "aws_security_group" "example2" {   # Creating the second VPC Security Group (AWS DBS only)    AWS docs for Amazon RDS security groups here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroups.html
  name = "example2"                    # Replace with your actual Security Group Name   You can change it based upon requirements or any other cloud provider's default settings for RDS instance creation etc., AWS docs here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroupsLifecycle.html
  description = "Example security group" # Replace with actual Security Group Description   You can change it based upon requirements or any other cloud provider's default settings for RDS instance creation etc., AWS docs here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroupsLifecycle.html
  vpc_id = aws_vpc.example1234567890abcdefg1hijklnmopqrstuvwxyzABCDEFG.id # Replace example with your actual VPC id   AWS docs for Amazon RDS security groups here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroupsLifecycle.html
  ingress = [{                         # Adding Ingress rules (AWS DBS only)    You can add your custom inbound rule, AWS docs for Amazon RDS security groups here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroupsLifecycle.html
      from_port = 3306                         # Replace with actual port   You can change it based upon requirements or any other cloud provider's default settings for RDS instance creation etc., AWS docs here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroupsLifecycle.html
      to_port = 3306                         # Replace with actual port   You can change it based upon requirements or any other cloud provider's default settings for RDS instance creation etc., AWS docs here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroupsLifecycle.html
      protocol = "tcp"                       # Replace with actual port   You can change it based upon requirements or any other cloud provider's default settings for RDS instance creation etc., AWS docs here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroupsLifecycle.html
      cidr_blocks = ["10.0.2.0/24"]          # Replace with actual CIDR Block   You can change it based upon requirements or any other cloud provider's default settings for RDS instance creation etc., AWS docs here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroupsLifecycle.html
      ip_v6_cidr_block = "::2"             # Replace with actual CIDR Block   You can change it based upon requirements or any other cloud provider's default settings for RDS instance creation etc., AWS docs here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroupsLifecycle.html
    }]                             # End of Ingress rules block   You can add more inbound rule as per your requirements or any other cloud provider's default settings for RDS instance creation etc., AWS docs here https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.DBSecurityGroupsLifecycle.html
} 
resource "aws_vpc" "example1234567890abcdefg1hijklnmopqrstuvwxyzABCDEFGIJKLMNOPQRSTUVWXYZAWSDBInstanceNameInUseErrorRefusedConnectionTimeoutExpiredInsufficientCapacityAccessDeniedException" {
  cidr_block = "0.0.0.0/0"
}
